--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Mariana Torres – Audiovisual Archivist & Moving Image Practitioner</title>
+  <title>Mariana Torres</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Fonts -->
@@ -13,14 +13,15 @@
     :root{
       --bg:#06070b;
       --text:#f2f4f7;
-      --muted: rgba(242,244,247,.72);
+      --muted: rgba(242,244,247,.70);
       --muted2: rgba(242,244,247,.55);
 
       --max: 1120px;
       --hdr-h: 64px;
 
-      --shadow: 0 22px 70px rgba(0,0,0,.55);
-      --border: rgba(255,255,255,.12);
+      --line: rgba(255,255,255,.22);
+      --line-soft: rgba(255,255,255,.14);
+      --overlay: rgba(6,7,11,.28);
     }
 
     *{ box-sizing:border-box; }
@@ -28,38 +29,37 @@
 
     body{
       margin:0;
-      font-family:"Source Serif 4", serif;
       color: var(--text);
+      font-family:"Source Serif 4", serif;
+      -webkit-font-smoothing: antialiased;
       background: url("Timeline2.gif.gif") center/cover no-repeat fixed;
       background-color: var(--bg);
-      -webkit-font-smoothing: antialiased;
     }
 
-    /* Soft global overlay */
+    /* very soft layer over GIF so text reads */
     body::before{
       content:"";
       position: fixed;
       inset: 0;
       background:
-        radial-gradient(1200px 680px at 50% 35%, rgba(6,7,11,.55), rgba(6,7,11,.20) 60%, rgba(6,7,11,.35) 100%),
-        linear-gradient(to bottom, rgba(6,7,11,.20), rgba(6,7,11,.20));
+        radial-gradient(1200px 700px at 50% 40%, rgba(6,7,11,.38), rgba(6,7,11,.14) 55%, rgba(6,7,11,.30) 100%),
+        linear-gradient(to bottom, var(--overlay), var(--overlay));
       pointer-events:none;
       z-index:0;
     }
 
-    header, main{ position:relative; z-index:1; }
+    header, main{ position: relative; z-index: 1; }
 
-    /* ===== Header minimal ===== */
+    /* ===== header minimal ===== */
     header{
       position: fixed;
       inset: 0 0 auto 0;
       height: var(--hdr-h);
-      background: linear-gradient(to bottom, rgba(6,7,11,.88), rgba(6,7,11,.40));
+      z-index: 1000;
+      background: linear-gradient(to bottom, rgba(6,7,11,.88), rgba(6,7,11,.35));
       border-bottom: 1px solid rgba(255,255,255,.08);
       backdrop-filter: blur(10px);
-      z-index:1000;
     }
-
     nav{
       max-width: var(--max);
       margin:0 auto;
@@ -68,17 +68,17 @@
       display:flex;
       align-items:center;
       justify-content: space-between;
+      gap: 18px;
     }
-
     .brand{
-      font-family:"Bebas Kai", sans-serif;
+      font-family:"Bebas Kai", system-ui, sans-serif;
       letter-spacing:.18em;
+      white-space: nowrap;
     }
-
     .menu{
       list-style:none;
       display:flex;
-      gap:14px;
+      gap: 14px;
       margin:0;
       padding:0;
       font-size:.94rem;
@@ -86,100 +86,108 @@
     }
     .menu a{
       text-decoration:none;
-      color:inherit;
+      color: inherit;
       opacity:.9;
+      white-space: nowrap;
     }
-    .menu a:hover{ opacity:1; color:var(--text); }
+    .menu a:hover{ opacity:1; color: var(--text); }
 
     main{ padding-top: var(--hdr-h); }
 
-    /* ===== HERO ===== */
+    /* ===== hero like your drawing ===== */
     .hero{
       min-height: calc(100vh - var(--hdr-h));
       display:flex;
       align-items:center;
       justify-content:center;
-      padding: 60px 22px 80px;
+      padding: 56px 22px 76px;
     }
 
-    .hero-wrap{
+    .stage{
+      width: min(980px, 100%);
+      height: 520px;                 /* stable “poster” space */
       position: relative;
-      width: min(920px, 100%);
-      display:flex;
-      justify-content:center;
     }
 
-    /* Shared rect base */
-    .rect{
-      position:absolute;
-      aspect-ratio: 1.66 / 1;
-      width: 100%;
+    /* Two overlapping rectangles (OUTLINE ONLY) */
+    .frame{
+      position: absolute;
       border-radius: 0;
-      backdrop-filter: blur(10px);
-      box-shadow: var(--shadow);
+      border: 1px solid var(--line);
+      background: rgba(0,0,0,0);     /* no fill */
     }
 
-    /* Retângulo B — fundo / sombra */
-    .rect.back{
-      width: 92%;
-      left: 4%;
-      top: -22px;
-      background: rgba(8,10,14,.28);
-      opacity: .65;
-      z-index:1;
+    /* Back frame (top-right) — like your sketch */
+    .frame.back{
+      width: 72%;
+      aspect-ratio: 1.66 / 1;        /* controlled proportion */
+      right: 0;
+      top: 10px;
+      border-color: var(--line-soft);
     }
 
-    /* Retângulo A — principal */
-    .rect.front{
-      position: relative;
-      background: rgba(10,12,16,.42);
-      border: 1px solid var(--border);
-      z-index:2;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding: 42px 48px;
+    /* Front frame (bottom-left) — like your sketch */
+    .frame.front{
+      width: 66%;
+      aspect-ratio: 1.66 / 1;
+      left: 0;
+      bottom: 10px;
+      border-color: var(--line);
     }
 
-    /* ===== Text ===== */
-    .hero-content{
-      text-align:center;
-      max-width: 640px;
+    /* Text block positioned in the overlap area */
+    .title-block{
+      position: absolute;
+      left: 50%;
+      top: 52%;
+      transform: translate(-50%, -50%);
+      width: min(720px, 92%);
+      text-align: center;
     }
 
+    /* Kicker sits visually in the top-right frame region */
     .kicker{
-      letter-spacing:.18em;
+      position: absolute;
+      right: 6%;
+      top: 70px;
+      width: 60%;
+      text-align: right;
+
+      letter-spacing: .14em;
       text-transform: uppercase;
-      font-size:.78rem;
+      font-size: .9rem;
       color: var(--muted2);
-      margin-bottom: 14px;
     }
 
     h1{
-      font-family:"Bebas Kai", sans-serif;
-      font-size: 3.3rem;
-      letter-spacing:.12em;
       margin: 0 0 10px;
-      line-height:1.05;
+      font-family:"Bebas Kai", system-ui, sans-serif;
+      font-size: 3.35rem;
+      letter-spacing: .12em;
+      line-height: 1.02;
       text-shadow: 0 12px 42px rgba(0,0,0,.55);
     }
 
     .role{
-      font-size:1.06rem;
+      margin: 0;
+      font-size: 1.08rem;
       color: var(--muted);
-      margin-bottom: 18px;
+      text-shadow: 0 10px 35px rgba(0,0,0,.45);
     }
 
-    .intro{
-      font-size:1.05rem;
-      line-height:1.8;
-      color: rgba(242,244,247,.9);
+    /* Responsive sanity */
+    @media (max-width: 980px){
+      .menu{ display:none; }
+      .stage{ height: 520px; }
+      .frame.back{ width: 86%; }
+      .frame.front{ width: 82%; }
+      .kicker{ top: 62px; right: 5%; width: 70%; font-size: .82rem; }
+      h1{ font-size: 2.7rem; }
     }
 
-    /* Responsive */
-    @media (max-width: 900px){
-      .rect.front{ padding: 30px 26px; }
-      h1{ font-size: 2.6rem; }
+    @media (max-width: 520px){
+      .stage{ height: 560px; }
+      .kicker{ top: 58px; width: 78%; }
     }
   </style>
 </head>
@@ -192,33 +200,29 @@
         <li><a href="about.html">About</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="analogue-film.html">Analogue Film Practice</a></li>
-        <li><a href="writing-publications.html">Writing & Publications</a></li>
+        <li><a href="writing-publications.html">Writing &amp; Publications</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
     <section class="hero">
-      <div class="hero-wrap">
+      <div class="stage">
+        <!-- rectangles like your sketch -->
+        <div class="frame back" aria-hidden="true"></div>
+        <div class="frame front" aria-hidden="true"></div>
 
-        <!-- Retângulo B (sombra / luz de fundo) -->
-        <div class="rect back" aria-hidden="true"></div>
+        <!-- kicker aligned to the back (top-right) rectangle zone -->
+        <div class="kicker">MOVING IMAGE · ARCHIVES · ANALOGUE PROCESSES</div>
 
-        <!-- Retângulo A (principal) -->
-        <div class="rect front">
-          <div class="hero-content">
-            <div class="kicker">MOVING IMAGE · ARCHIVES · ANALOGUE PROCESSES</div>
-            <h1>MARIANA TORRES</h1>
-            <div class="role">Audiovisual Archivist & Moving Image Practitioner</div>
-            <p class="intro">
-              Working across moving image archives, preservation practices, and analogue film processes.
-              My work connects research, technical practice, and artistic approaches to the materiality of film.
-            </p>
-          </div>
+        <!-- centered name + role in the overlap -->
+        <div class="title-block">
+          <h1>MARIANA TORRES</h1>
+          <p class="role">Audiovisual Archivist &amp; Moving Image Practitioner</p>
         </div>
-
       </div>
     </section>
   </main>
 </body>
 </html>
+
