--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       --line: rgba(255,255,255,.22);
       --line-soft: rgba(255,255,255,.14);
-      --overlay: rgba(6,7,11,.28);
+      --overlay: rgba(6,7,11,.24);
     }
 
     *{ box-sizing:border-box; }
@@ -36,13 +36,13 @@
       background-color: var(--bg);
     }
 
-    /* very soft layer over GIF so text reads */
+    /* soft layer over GIF */
     body::before{
       content:"";
       position: fixed;
       inset: 0;
       background:
-        radial-gradient(1200px 700px at 50% 40%, rgba(6,7,11,.38), rgba(6,7,11,.14) 55%, rgba(6,7,11,.30) 100%),
+        radial-gradient(1200px 700px at 50% 40%, rgba(6,7,11,.34), rgba(6,7,11,.12) 55%, rgba(6,7,11,.28) 100%),
         linear-gradient(to bottom, var(--overlay), var(--overlay));
       pointer-events:none;
       z-index:0;
@@ -94,7 +94,7 @@
 
     main{ padding-top: var(--hdr-h); }
 
-    /* ===== hero like your drawing ===== */
+    /* ===== hero ===== */
     .hero{
       min-height: calc(100vh - var(--hdr-h));
       display:flex;
@@ -105,47 +105,42 @@
 
     .stage{
       width: min(980px, 100%);
-      height: 520px;                 /* stable “poster” space */
+      height: 520px;
       position: relative;
     }
 
-    /* Two overlapping rectangles (OUTLINE ONLY) */
+    /* frames */
     .frame{
       position: absolute;
       border-radius: 0;
       border: 1px solid var(--line);
-      background: rgba(0,0,0,0);     /* no fill */
+      background: rgba(0,0,0,0);
     }
 
-    /* Back frame (top-right) — like your sketch */
+    /* back frame: darker “screen” behind */
     .frame.back{
-      width: 72%;
-      aspect-ratio: 1.66 / 1;        /* controlled proportion */
+      width: 74%;
+      aspect-ratio: 1.66 / 1;
       right: 0;
       top: 10px;
-      border-color: var(--line-soft);
+      border-color: rgba(255,255,255,.10);
+
+      /* subtle grey veil (screen behind) */
+      background: rgba(10,12,16,.14);
+      opacity: .72;
     }
 
-    /* Front frame (bottom-left) — like your sketch */
+    /* front frame: shift right so it contains full “TORRES” */
     .frame.front{
-      width: 66%;
+      width: 70%;                 /* slightly wider so name fits */
       aspect-ratio: 1.66 / 1;
-      left: 0;
+      left: 6%;                   /* moved right (was 0) */
       bottom: 10px;
       border-color: var(--line);
+      opacity: .92;
     }
 
-    /* Text block positioned in the overlap area */
-    .title-block{
-      position: absolute;
-      left: 50%;
-      top: 52%;
-      transform: translate(-50%, -50%);
-      width: min(720px, 92%);
-      text-align: center;
-    }
-
-    /* Kicker sits visually in the top-right frame region */
+    /* kicker belongs to the top-right frame zone */
     .kicker{
       position: absolute;
       right: 6%;
@@ -159,6 +154,27 @@
       color: var(--muted2);
     }
 
+    /* title block now sits inside the FRONT frame */
+    .title-block{
+      position: absolute;
+
+      /* anchor to the front frame “box” */
+      left: 6%;
+      bottom: 10px;
+
+      width: 70%;
+      aspect-ratio: 1.66 / 1;
+
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      flex-direction: column;
+      text-align:center;
+
+      /* keep text comfortably inside */
+      padding: 0 40px;
+    }
+
     h1{
       margin: 0 0 10px;
       font-family:"Bebas Kai", system-ui, sans-serif;
@@ -166,6 +182,7 @@
       letter-spacing: .12em;
       line-height: 1.02;
       text-shadow: 0 12px 42px rgba(0,0,0,.55);
+      white-space: nowrap; /* prevents awkward line breaks */
     }
 
     .role{
@@ -175,19 +192,36 @@
       text-shadow: 0 10px 35px rgba(0,0,0,.45);
     }
 
-    /* Responsive sanity */
+    /* Responsive */
     @media (max-width: 980px){
       .menu{ display:none; }
       .stage{ height: 520px; }
-      .frame.back{ width: 86%; }
-      .frame.front{ width: 82%; }
-      .kicker{ top: 62px; right: 5%; width: 70%; font-size: .82rem; }
+
+      .frame.back{ width: 88%; }
+      .frame.front{
+        width: 84%;
+        left: 4%;
+      }
+
+      .title-block{
+        width: 84%;
+        left: 4%;
+        padding: 0 22px;
+      }
+
+      .kicker{
+        top: 62px;
+        right: 5%;
+        width: 76%;
+        font-size: .82rem;
+      }
       h1{ font-size: 2.7rem; }
+      .role{ font-size: 1.02rem; }
     }
 
     @media (max-width: 520px){
       .stage{ height: 560px; }
-      .kicker{ top: 58px; width: 78%; }
+      h1{ font-size: 2.3rem; }
     }
   </style>
 </head>
@@ -208,14 +242,14 @@
   <main>
     <section class="hero">
       <div class="stage">
-        <!-- rectangles like your sketch -->
+        <!-- rectangles -->
         <div class="frame back" aria-hidden="true"></div>
         <div class="frame front" aria-hidden="true"></div>
 
-        <!-- kicker aligned to the back (top-right) rectangle zone -->
+        <!-- kicker (top-right zone) -->
         <div class="kicker">MOVING IMAGE · ARCHIVES · ANALOGUE PROCESSES</div>
 
-        <!-- centered name + role in the overlap -->
+        <!-- title + role inside the FRONT frame -->
         <div class="title-block">
           <h1>MARIANA TORRES</h1>
           <p class="role">Audiovisual Archivist &amp; Moving Image Practitioner</p>
