--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
 
     /* back frame: darker “screen” behind */
     .frame.back{
-      width: 60%;
+      width: 74%;
+      width: 70%;
       aspect-ratio: 1.66 / 1;
 
       /* (1) micro horizontal move in px */
@@ -129,12 +130,13 @@
 
       /* subtle grey veil (screen behind) */
       background: rgba(10,12,16,.14);
+      opacity: .72;
       opacity: .82;
     }
 
     /* front frame */
     .frame.front{
-      width: 60%;
+      width: 70%;
       aspect-ratio: 1.66 / 1;
       left: 6%;
       bottom: 10px;
@@ -147,7 +149,7 @@
       position: absolute;
 
       /* (2) use px instead of % for micro control */
-      right: 40px;
+      right: 18px;
 
       top: 70px;
       width: 60%;
@@ -262,6 +264,9 @@
     repeating-linear-gradient(
       0deg,
       rgba(0,0,0,.035),
+      rgba(0,0,0,.035) 1px,
+      transparent 1px,
+      transparent 2px
       rgba(0,0,0,.035) 4px,
       transparent 2px,
       transparent 3px
@@ -271,12 +276,14 @@
   mix-blend-mode: multiply;
 
   /* control intensity */
+  opacity: .35;
   opacity: .60;
 
   pointer-events:none;
 }
     /* breathing zone after hero */
 .hero-breath{
+  height: 30vh;
   height: 20vh;
   background: transparent;
 }
@@ -361,5 +368,3 @@
   </main>
 </body>
 </html>
-
-
