--- a/index.html
+++ b/index.html
@@ -115,7 +115,16 @@
       border-radius: 0;
       border: 1px solid var(--line);
       background: rgba(0,0,0,0);
+        /* nova linha: transições suaves */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
+/* hover: leve escala e sombra */
+.frame:hover{
+  transform: scale(1.02);
+  box-shadow: 0 20px 40px rgba(0,0,0,0.25);
+  z-index: 10; /* garante que fica acima */
+}
+
 
     /* back frame: darker “screen” behind */
     .frame.back{
@@ -128,22 +137,34 @@
       top: 25px;
       border-color: rgba(255,255,255,.10);
 
-      /* subtle grey veil (screen behind) */
-      background: rgba(10,12,16,.14);
-      opacity: .72;
-      opacity: .82;
+     background-image: 
+    repeating-linear-gradient(
+      0deg,
+      rgba(255,255,255,0.01),
+      rgba(255,255,255,0.01) 1px,
+      transparent 1px,
+      transparent 2px
+    );
+  border-color: rgba(255,255,255,.10);
+  opacity: .82;
+  z-index: 1; /* atrás da front frame */
     }
 
     /* front frame */
     .frame.front{
-      width: 70%;
-      aspect-ratio: 1.66 / 1;
-      left: 6%;
-      bottom: 10px;
-      border-color: var(--line);
-      opacity: .92;
-    }
-
+      background: linear-gradient(rgba(6,7,11,0.7), rgba(6,7,11,0.5));
+  background-image: 
+    repeating-linear-gradient(
+      0deg,
+      rgba(255,255,255,0.005),
+      rgba(255,255,255,0.005) 1px,
+      transparent 1px,
+      transparent 2px
+    );
+  border-color: var(--line);
+  opacity: .92;
+  z-index: 2; /* na frente */
+}
     /* kicker */
     .kicker{
       position: absolute;
