--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       position: absolute;
       left: 12%;
       bottom: 50px;
-      
+
       width: 70%;
       aspect-ratio: 1.66 / 1;
 
@@ -358,7 +358,8 @@
     <p class="about-text">
       I work with moving image preservation, analogue film practices,
       and archival processes, focusing on the transmission of
-      photochemical knowledge and its contemporary relevance.
+      photochemical knowledge and its contemporary relevance,
+      in correlation with the imaterial digital possibilitys.
     </p>
   </div>
 </section>
