--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     /* ===== intersection layer: darkened + implicit texture ===== */
 
 .frame.front::after{
-  content:".frame.back";
+  content:"";
   position:absolute;
   inset:0;
 
