--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
 <section class="about">
   <div class="about-inner">
-    <img src="MarianaTorr/mariana-portfolio/pag2.png" alt="Mariana Torres" class="about-photo" />
+    <img src="pag2.png" alt="Mariana Torres" class="about-photo" />
 
     <p class="about-text">
       I work with moving image preservation, analogue film practices,
