--- a/index.html
+++ b/index.html
@@ -359,7 +359,8 @@
       I work with moving image preservation, analogue film practices,
       and archival processes, focusing on the transmission of
       photochemical knowledge and its contemporary relevance,
-      in correlation with the imaterial digital possibilitys.
+      in correlation with the imaterial digital possibilitys through research and
+      expanded cinema proposels.
     </p>
   </div>
 </section>
