--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
       and archival processes, focusing on the transmission of
       photochemical knowledge and its contemporary relevance,
       in correlation with the imaterial digital possibilitys through research and
-      expanded cinema proposels.
+      cinematic expanded cinema proposels.
     </p>
   </div>
 </section>
