--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
   height: 220px;        /* define o frame */
   object-fit: cover;   /* ativa o crop */
   object-position: left center;
+  border-radius: 50%; /* Isso cria o efeito circular */
   opacity: .92;
 }
 /* text */
