--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 .about-photo{
   width: 220px;
   height: 220px;        /* define o frame */
-  object-fit: cover;   /* ativa o crop */
+  object-fit: none;   /* ativa o crop */
   object-position: 30% 20%;
   border-radius: 50%; /* Isso cria o efeito circular */
   opacity: .92;
