--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
   width: 220px;
   height: 220px;        /* define o frame */
   object-fit: none;   /* ativa o crop */
-  object-position: 8% 17%;
+  object-position: 18px 37px;
   border-radius: 50%; /* Isso cria o efeito circular */
   opacity: .92;
 }
