--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       bottom: 110px;
       border-color: var(--line);
       opacity: .92;
-            background: linear-gradient(rgba(6,7,11,0.7), rgba(6,7,11,0.5));
+            background: linear-gradient(rgba(250, 255, 184, 0.7), rgba(248, 255, 149, 0.5));
   background-image: 
     repeating-linear-gradient(
       0deg,
