--- a/index.html
+++ b/index.html
@@ -294,11 +294,11 @@
   background:
     repeating-linear-gradient(
       0deg,
-      rgba(0,0,0,.035),
-      rgba(0, 0, 0, 0.035) 1px,
+      rgba(89, 180, 210, 0.616),
+      rgba(246, 255, 149, 0.549) 1px,
       transparent 1px,
       transparent 2px
-      rgba(0, 0, 0, 0.035) 4px,
+      rgba(246, 255, 149, 0.549) 4px,
       transparent 1px,
       transparent 2px
     );
