--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
       I work with moving image preservation, analogue film practices,
       and archival processes, focusing on the transmission of
       photochemical knowledge and its contemporary relevance,
-      in correlation with the imaterial digital possibilitys through research and
+      in correlation with the imaterial digital spaces through research and
       cinematic expanded cinema proposels.
     </p>
   </div>
