--- a/index.html
+++ b/index.html
@@ -340,7 +340,6 @@
   object-position: -150px -60px;
   border-radius: 50%; /* Isso cria o efeito circular */
   opacity: .84;
-
   /* photo + name wrapper */
 .about-photo-wrap{
   display: flex;
@@ -348,6 +347,7 @@
   align-items: center;
   gap: 14px;
 }
+
 /* name under photo */
 .about-name{
   font-family: "Bebas Kai", system-ui, sans-serif;
@@ -411,7 +411,7 @@
       I work with moving image preservation, analogue film practices,
       and archival processes, focusing on the transmission of
       photochemical knowledge and its contemporary relevance,
-      in correlation with the imaterial digital spaces through research and
+      in correlation with the imaterial digital spaces, through research and
       cinematic expanded cinema proposels.
     </p>
   </div>
