--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
       rgba(246, 255, 149, 0.549) 1px,
       transparent 1px,
       transparent 2px
-      rgba(246, 255, 149, 0.549) 4px,
+      rgba(0, 0, 0, 0.035) 4px,
       transparent 1px,
       transparent 2px
     );
@@ -340,22 +340,6 @@
   object-position: -150px -60px;
   border-radius: 50%; /* Isso cria o efeito circular */
   opacity: .84;
-  /* photo + name wrapper */
-.about-photo-wrap{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 14px;
-}
-
-/* name under photo */
-.about-name{
-  font-family: "Bebas Kai", system-ui, sans-serif;
-  letter-spacing: .18em;
-  font-size: 1rem;
-  color: var(--muted);
-  text-transform: uppercase;
-}
 }
 /* text */
 .about-text{
@@ -403,15 +387,14 @@
 <div class="hero-breath"></div>
 
 <section class="about">
-  <div class="about-photo-wrap">
-  <img src="pag2.png" alt="Mariana Torres" class="about-photo" />
-  <div class="about-name">Mariana Torres</div>
-</div>
+  <div class="about-inner">
+    <img src="pag2.png" alt="Mariana Torres" class="about-photo" />
+
     <p class="about-text">
       I work with moving image preservation, analogue film practices,
       and archival processes, focusing on the transmission of
       photochemical knowledge and its contemporary relevance,
-      in correlation with the imaterial digital spaces, through research and
+      in correlation with the imaterial digital possibilitys through research and
       cinematic expanded cinema proposels.
     </p>
   </div>
