--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
   object-position: -150px -60px;
   border-radius: 50%; /* Isso cria o efeito circular */
   opacity: .92;
+  filter: contrast(1.08) sharpen(1);
 }
 /* alinhar tudo à direita na coluna da foto */
 .about-photo-col{
