--- a/index.html
+++ b/index.html
@@ -333,11 +333,11 @@
 }
 /* coluna da foto */
 .about-photo-col{
-  display: flex;
+  display: flex-end;
   flex-direction: column;
   align-items: center;
   flex-shrink: 0; /* não deixa empurrar o texto */
-}
+}  
 
 /* nome */
 .about-name{
@@ -359,14 +359,6 @@
   opacity: .92;
   filter: contrast(1.08) sharpen(1);
 }
-/* alinhar tudo à direita na coluna da foto */
-.about-photo-col{
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  flex-shrink: 0;
-}
-
 /* nome */
 .about-name{
   margin-top: 14px;
