--- a/index.html
+++ b/index.html
@@ -333,10 +333,11 @@
 }
 /* coluna da foto */
 .about-photo-col{
-  display: flex-end;
+  display: flex;
   flex-direction: column;
   align-items: center;
   flex-shrink: 0; /* não deixa empurrar o texto */
+
 }  
 
 /* nome */
@@ -357,7 +358,7 @@
   object-position: -150px -60px;
   border-radius: 50%; /* Isso cria o efeito circular */
   opacity: .92;
-  filter: contrast(1.08) sharpen(1);
+  filter: contrast(1.08) saturate(1.02);
 }
 /* nome */
 .about-name{
