--- a/index.html
+++ b/index.html
@@ -458,17 +458,17 @@
   <div class="about-contact">
     <div class="contact-item">
       <span class="icon">✉</span>
-      <a href="mailto:teuemail@email.com">teuemail@email.com</a>
+      <a href="mariana1108.torres@gmail.com">mariana1108.torres@gmail.com</a>
     </div>
 
     <div class="contact-item">
       <span class="icon">☎</span>
-      <a href="tel:+351912345678">+351 912 345 678</a>
+      <a href="tel:+351912473730">+351 912 473 730</a>
     </div>
 
     <div class="contact-item">
       <span class="icon">↗</span>
-      <a href="https://vimeo.com/teuvimeo" target="_blank" rel="noopener">
+      <a href="https://vimeo.com/user116342399" target="_blank" rel="noopener">
         Vimeo
       </a>
     </div>
