--- a/index.html
+++ b/index.html
@@ -380,10 +380,9 @@
   margin-top: calc(1.55em + 6px);
 }
 .about-info{
-  display: flex;
-  flex-direction: column;
-  gap: 18px;
-  padding-top: 8px;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto;
 }
 
 /* cada linha */
