--- a/index.html
+++ b/index.html
@@ -458,12 +458,12 @@
   <div class="about-contact">
     <div class="contact-item">
       <span class="icon">✉</span>
-      <a href="mailto:teuemail@email.com">teuemail@email.com</a>
+      <a href="mailto:teuemail@email.com">mariana1108.torres@gmail.com</a>
     </div>
 
     <div class="contact-item">
       <span class="icon">☎</span>
-      <a href="tel:+351912345678">+351 912 345 678</a>
+      <a href="tel:+351912345678">+351 912 473 730</a>
     </div>
 
     <div class="contact-item">
